# xm_vision

./: CMakeLists.txt  LICENSE  README.md  Readme.md  package.xml  path.txt
include/: Cvdetect.h  Filter.h  Train.h  cfan.h  common.h  face_alignment.h  face_detection.h  init_recognize.h  sift.h  vfh.h
include/feat/: surf_feature_map.h
include/util/: image_pyramid.h
src/: Filter.cpp  Train.cpp  getobject.cpp  init_recognize.cpp  recognize.cpp  training.cpp
