<?xml version="1.0"?>
<package>
  <name>xm_object</name>
  <version>0.0.0</version>
  <description>The xm_object package</description>

  <maintainer email="wachelo@163.com">charle</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xm_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_filters</run_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
